# python-programming-for-future-professionals

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/chapter_01/: README.md  code_1_1.py
src/chapter_02/: README.md  code_2_1.py  code_2_2.py  code_2_3.py  code_2_4.py  code_2_5.py  code_2_6.py  fizz_buzz.py
src/chapter_03/: README.md  test_code_3_1.py  test_fizz_buzz.py
