[tool.poetry]
name = "python-programming-for-future-professionals"
version = "0.1.0"
description = ""
authors = ["drs-t0m0 <drs-tomo@hotmail.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
